# borg

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  BACKLOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  agents.md  borg.plist.template  borg.service  build.zig  build.zig.zon  docker-compose.yml  justfile  spec.md
.borg/: pipeline-state.json  prompt.md
.cargo/: .global-cache
.github/workflows/: ci.yml  deploy-frontend.yml
borg-rs/: Cargo.toml  justfile  rustfmt.toml  schema.pg.sql  schema.sql  schema_notes.md
borg-rs/crates/borg-agent/: Cargo.toml
borg-rs/crates/borg-agent/src/: bridge.rs  claude.rs  codex.rs  drain.rs  event.rs  gemini.rs  instruction.rs  lib.rs  mcp.rs  ollama.rs  reliable.rs
borg-rs/crates/borg-agent/tests/: agent_error_tests.rs  bridge_test.rs  cid_task_tests.rs  event_tests.rs  instruction_tests.rs  knowledge_section_tests.rs  ollama_constructor_tests.rs  parse_stream_tests.rs  parse_test_result_tests.rs  provider_env_var_tests.rs  sentinel_tests.rs  timeout_tests.rs
borg-rs/crates/borg-core/: Cargo.toml
borg-rs/crates/borg-core/src/: agent.rs  chat.rs  config.rs  cron.rs  db.rs  email.rs  git.rs  ipc.rs  knowledge.rs  lib.rs  modes.rs  observer.rs  parser.rs  pgcompat.rs  pipeline.rs  pipeline_maintenance.rs  sandbox.rs  sidecar.rs  stream.rs  telegram.rs  tool_calls.rs  traits.rs  types.rs
borg-rs/crates/borg-core/src/sidecar/: attachment.rs  discord.rs  mod.rs  slack.rs  whatsapp.rs
borg-rs/crates/borg-core/tests/: backlog_scoring_tests.rs  chat_collector_tests.rs  chat_tests.rs  check_remote_updates_tests.rs  chunk_text_tests.rs  config_oauth_tests.rs  config_tests.rs  db_config_tests.rs  db_lock_poison_tests.rs  db_migration_tests.rs  db_poison_tests.rs  db_poisoned_mutex_test.rs  db_result_propagation.rs  db_state_transitions.rs  db_tests.rs  exec_result_tests.rs  git_output_limit_tests.rs  git_tests.rs  in_flight_guard_tests.rs  in_flight_tests.rs  ipc_tests.rs  knowledge_chunk_tests.rs  knowledge_file_tests.rs  knowledge_size_tests.rs  knowledge_tests.rs  modes_tests.rs  parse_ts_tests.rs  phase_timing_tests.rs  pipeline_event_tests.rs  pipeline_mode_tests.rs  pipeline_state_snapshot.rs  sandbox_hash_tests.rs  sandbox_tests.rs  search_embeddings_tests.rs  session_prune_tests.rs  signal_tests.rs  stream_cleanup_tests.rs  stream_end_task_tests.rs  stream_history_cap_tests.rs  stream_history_tests.rs  (+9 more)
borg-rs/crates/borg-core/tests/support/: mod.rs
borg-rs/crates/borg-domains/: Cargo.toml
borg-rs/crates/borg-domains/src/: lib.rs
borg-rs/crates/borg-domains/src/chef/: mod.rs
borg-rs/crates/borg-domains/src/construction/: mod.rs
borg-rs/crates/borg-domains/src/crew/: mod.rs
borg-rs/crates/borg-domains/src/data/: mod.rs
borg-rs/crates/borg-domains/src/health/: mod.rs
borg-rs/crates/borg-domains/src/legal/: benchmark.rs  citations.rs  clio.rs  cognitive.rs  courtlistener.rs  edgar.rs  federal_register.rs  intelligize.rs  lexis.rs  lexmachina.rs  mod.rs  statenet.rs  westlaw.rs
borg-rs/crates/borg-domains/src/medwrite/: mod.rs
borg-rs/crates/borg-domains/src/sales/: mod.rs
borg-rs/crates/borg-domains/src/swe/: mod.rs
borg-rs/crates/borg-domains/src/web/: mod.rs
borg-rs/crates/borg-domains/tests/: get_mode_alias_tests.rs  mode_tests.rs
borg-rs/crates/borg-server/: Cargo.toml
borg-rs/crates/borg-server/src/: auth.rs  backup.rs  ingestion.rs  logging.rs  main.rs  opensearch.rs  proxy.rs  routes.rs  routes_modes.rs  search.rs  storage.rs  user_bots.rs  vespa.rs
borg-rs/crates/borg-server/src/routes/: admin.rs  chat.rs  cloud.rs  cron.rs  knowledge.rs  linked_credentials.rs  mod.rs  plan.rs  projects.rs  search.rs  tasks.rs  tool_calls.rs  utils.rs
borg-rs/migrations/: 001_initial.sql  002_repos_table.sql  003_events_table.sql  004_task_messages.sql  005_config_table.sql  007_privilege_gate.sql
container/: Dockerfile  entrypoint.sh  entrypoint_commit_test.sh  entrypoint_test.sh  setup-rust.sh  setup-zig.sh  test_entrypoint.sh  test_entrypoint_json.sh  test_json_encoding.sh  test_json_escape.sh  test_run_check.sh
dashboard/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts  wrangler.toml
dashboard/public/: _headers
dashboard/src/: App.tsx  index.css
deploy/: Caddyfile  DEPLOYMENT_PROFILES.md  Dockerfile.borg  SETUP.md  agent-deploy.sh  borg.service  cloud-init.yml  deploy.sh  docker-compose.stack.yml  docker-compose.yml  litestream.yml.template  local-stack.env.example  local_loadtest.py  preflight.sh  provision-and-deploy.sh  provision-hybrid.sh  settings.production.example.json
deploy/loadtest/: .gitignore  package.json
deploy/seaweedfs/: s3.conf
deploy/vespa/: init-vespa.sh
discord/: bridge.js  package.json
docs/: ROADMAP.md  architecture-overhaul-tasks.md  stack-refactor-plan.md
landing/: index.html  wrangler.toml
plans/: linter-integration.md  resume-5b57ad8e.md
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  lib.rs  types.rs  upload.rs
sdk/ts/: package.json  tsconfig.json
sidecar/: bridge.js  package.json  process-utils.js  process-utils.test.js
sidecar/borg-mcp/: server.js
src/: agent.zig  agent_cost_test.zig  agent_ndjson_fallback_test.zig  agent_sentinel_test.zig  agent_session_id_test.zig  agent_timeout_test.zig  build_git_hash_test.zig  config.zig  config_env_test.zig  config_home_fallback_test.zig  config_init_test.zig  config_load_test.zig  config_parse_warn_test.zig  config_repo_prompt_test.zig  config_test.zig  db.zig  db_dead_letter_test.zig  db_expire_sessions_test.zig  db_groups_test.zig  db_messages_test.zig  db_metrics_test.zig  db_pipeline_query_test.zig  db_proposal_test.zig  db_queue_entry_test.zig  db_run_history_test.zig  db_task_output_test.zig  db_unanswered_test.zig  db_update_task_status_test.zig  discord.zig  docker.zig  docker_attachAndWrite_removed_test.zig  docker_createContainer_binds_escape_test.zig  docker_isBindSafe_test.zig  docker_timeout_test.zig  git.zig  git_merge_delete_test.zig  git_rebase_checkout_test.zig  git_worktree_test.zig  gt.zig  http.zig  (+46 more)
whatsapp/: bridge.js  package.json
(+113 files in other folders)
