[package]
name = "borg-sdk"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Rust client SDK for the Borg API"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "time"] }
thiserror = "2"
urlencoding = "2"
