[package]
name = "borg-agent"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
borg-core = { path = "../borg-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
