[package]
name = "borg-agent"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lints]
workspace = true

[dependencies]
borg-core = { path = "../borg-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
chrono = { workspace = true }
tempfile = "3"
