[package]
name = "borg-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
