[package]
name = "borg-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
postgres-types = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
libc = "0.2"
tokio-util = "0.7"
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "model", "cache", "rustls_backend",
] }
whatsapp-rust = "0.3"
whatsapp-rust-sqlite-storage = "0.3"
whatsapp-rust-tokio-transport = "0.3"
whatsapp-rust-ureq-http-client = "0.3"
wacore = "0.3"
wacore-binary = "0.3"
waproto = "0.3"
slack-morphism = { version = "2", features = ["hyper"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
bytes = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4.3"
aws-config = "1"
aws-sdk-kms = "1"
imap = { version = "3.0.0-alpha.15", features = ["native-tls"] }
native-tls = "0.2"
mailparse = "0.15"
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls", "builder"] }

[dev-dependencies]
tempfile = "3"
libc = "0.2"
