[package]
name = "borg-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "borg-server"
path = "src/main.rs"

[dependencies]
borg-core = { path = "../borg-core" }
borg-domains = { path = "../borg-domains" }
borg-agent = { path = "../borg-agent" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
tempfile = "3"
zip = "2"
sha2 = "0.10"
reqwest = { workspace = true }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-sdk-sqs = "1"
