[package]
name = "borg-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lints]
workspace = true

[[bin]]
name = "borg-server"
path = "src/main.rs"

[dependencies]
borg-core = { path = "../borg-core" }
borg-domains = { path = "../borg-domains" }
borg-agent = { path = "../borg-agent" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "9"
tempfile = "3"
zip = "2"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
reqwest = { workspace = true }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-sdk-sqs = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sigv4 = "1.4.2"
aws-types = "1.3.14"
http = "1.4.0"
aws-sdk-bedrockruntime = "1.127.0"
tokio-util = { version = "0.7.18", features = ["net"] }
hyper-util = { version = "0.1.20", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
urlencoding = "2"
